entity docs delete confirmation

--- a/src/app/features/entities/components/entity/view-entity/entity-docs/entity-docs.component.html
+++ b/src/app/features/entities/components/entity/view-entity/entity-docs/entity-docs.component.html
@@ -109,3 +109,10 @@
     </div>
   </div>
 </div>
+<app-reusable-input
+  [modalId]="'deleteDocConfirmationModal'"
+  [title]="'Delete Confirmation'"
+  [message]="'Are you sure you want to delete this document?'"
+  (confirmed)="confirmDocDelete()"
+  #deleteDocConfirmationModal
+></app-reusable-input>
