fetch previous heads by sub division code fix

--- a/src/app/features/crm/components/hierarchy/hierarchy.component.html
+++ b/src/app/features/crm/components/hierarchy/hierarchy.component.html
@@ -924,8 +924,8 @@
                     class="form-control"
                     id="agentName"
                     formControlName="agentName"
+                    (click)="openAllUsersModal()" value="{{selectedMainUser?.name}}" readonly
                   />
-                       (click)="openAllUsersModal()" value="{{selectedMainUser?.name}}" readonly>
                 </div>
               </ng-container>
               <ng-container *ngIf="visibleStatus.wef === 'Y'">
